--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -19,9 +19,9 @@
     "highlight.js": "^11.11.1",
     "lucide-react": "^0.474.0",
     "microcms-js-sdk": "^3.1.2",
-    "next": "15.1.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "14.2.8",
+    "react": "^18",
+    "react-dom": "^18.3.1",
     "sharp": "^0.33.5",
     "swiper": "^11.2.2",
     "tailwind-merge": "^3.0.1",
